fix: update code/fieldset/collapse styles & image address

--- a/packages/fieldset/fieldset.styl
+++ b/packages/fieldset/fieldset.styl
@@ -9,7 +9,7 @@
   border-top-left-radius: 3px
   border-top-right-radius: 3px
   font-size rem(13)
-  padding rem(20)
+  padding var(--geist-gap)
 
   h1, h2, h3, h4, h5, h6
     font-size rem(20)
@@ -22,6 +22,12 @@
     font-size rem(14)
     line-height 1.6
     margin var(--geist-gap-half) 0
+
+  > :last-child
+    margin-bottom 0
+
+  > :first-child
+    margin-top 0
 
 .zi-fieldset-footer
   background-color var(--accents-1)
